# email-summary-telegram-ai-assistant

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
src/: __init__.py  main.py
src/agents/: __init__.py  email_agent.py  meeting_agent.py
src/api/: dependencies.py  router.py
src/api/routes/: chat.py  emails.py  followups.py  health.py  meetings.py  vectors.py  (+1 more)
src/config/: __init__.py  config.py  datetime.py  logging.py
src/integrations/: __init__.py  ai_service.py  calendar_service.py  gmail_service.py  telegram_service.py
src/mcp/: __init__.py  server.py
src/models/: __init__.py  chat_message.py  followup.py  vector_document.py
src/operations/: __init__.py  chat_history_use_case.py  email_use_case.py  followup_use_case.py  meeting_use_case.py  notification_use_case.py  vector_document_use_case.py
src/presentation/: __init__.py
src/prompts/: __init__.py  email_classification.md  email_draft_reply.md  meeting_brief.md  meeting_summary.md
src/schemas/: chat.py  email.py  followup.py  health.py  meeting.py  notification.py  vector.py
src/storage/: __init__.py  chat_history_repository.py  followup_repository.py  memory_followup_repository.py  postgres_chat_history_repository.py  postgres_followup_repository.py  postgres_vector_repository.py  vector_repository.py
src/tools/: __init__.py  email_tools.py  meeting_tools.py  notification_tools.py  registry.py
src/ui/: streamlit_app.py
src/workers/: __init__.py  scheduler.py
src/workflows/: __init__.py  email_graph.py  email_review_graph.py  nodes.py  workflow.py
(+18 files in other folders)
