[project]
name = "email-ai-assistant"
version = "0.1.0"
description = "AI-powered executive assistant automation platform."
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.4",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "google-api-python-client>=2.140.0",
    "google-auth-oauthlib>=1.2.1",
    "httpx>=0.27.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "mcp>=1.2.0",
    "pgvector>=0.3.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.40.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
